another image added

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             <div class="left">
               <div class="left-main">
                 <div class="img-container observe">
-                  <img src="./img/professional-artist-maker-working-in-workshop-crafting-on-pumpkin-creative-people-handmade-crafts-1-800x534.jpg" alt="">
+                  <img src="./img/Carole Bamford the founder of Daylesford on the importance of handmade things.jpeg" alt="">
                 </div>
               </div>
             </div>
